--- a/plugins/testPlugin/CMakeLists.txt
+++ b/plugins/testPlugin/CMakeLists.txt
@@ -12,14 +12,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
 
-add_library(testPlugin MODULE
-  ../base.h
-  ../bridge.h
-  plugintest.cpp
-  plugintest.h
-)
+add_library(testPlugin MODULE ../base.h ../bridge.h plugintest.cpp plugintest.h)
 target_link_libraries(testPlugin Qt${QT_VERSION_MAJOR}::Core)
 
-install(TARGETS testPlugin
-    LIBRARY DESTINATION lib
-)
+install(TARGETS testPlugin LIBRARY DESTINATION lib)
