--- a/plugins/testPlugin/CMakeLists.txt
+++ b/plugins/testPlugin/CMakeLists.txt
@@ -9,10 +9,10 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 add_library(testPlugin MODULE ../base.h ../bridge.h plugintest.cpp plugintest.h)
-target_link_libraries(testPlugin Qt${QT_VERSION_MAJOR}::Core)
+target_link_libraries(testPlugin Qt${QT_VERSION_MAJOR}::Widgets)
 
 install(TARGETS testPlugin LIBRARY DESTINATION lib)
