--- a/speechtotext/vosk-api/CMakeLists.txt
+++ b/speechtotext/vosk-api/CMakeLists.txt
@@ -1,10 +1,18 @@
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Multimedia)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Multimedia)
+find_package(Vosk QUIET)
+
+if (NOT ${Vosk_FOUND})
+    message(WARNING "Vosk not found! Download vosk from https://github.com/alphacep/vosk-api/releases
+                     and copy the library and the 'vosk-api.h' file in ${PROJECT_SOURCE_DIR}")
+    return()
+endif()
+
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
 
 add_library(voskPlugin MODULE ../speechtotextplugin.h voskplugin.cpp voskplugin.h)
-target_link_libraries(voskPlugin Qt${QT_VERSION_MAJOR}::Multimedia vosk)
-target_include_directories(voskPlugin PUBLIC ${PROJECT_SOURCE_DIR}/vosk)
+target_link_libraries(voskPlugin Qt${QT_VERSION_MAJOR}::Core Vosk)
 
 install(TARGETS voskPlugin LIBRARY DESTINATION lib)
 
+set(TTS_PLUGINS ${TTS_PLUGINS} voskPlugin PARENT_SCOPE)
 list(APPEND ANDROID_EXTRA_LIBS ${CMAKE_SOURCE_DIR}/vosk/libvosk.so)
