--- a/speechtotext/vosk-api/CMakeLists.txt
+++ b/speechtotext/vosk-api/CMakeLists.txt
@@ -16,3 +16,9 @@ install(TARGETS voskPlugin LIBRARY DESTINATION lib)
 
 set(TTS_PLUGINS ${TTS_PLUGINS} voskPlugin PARENT_SCOPE)
 list(APPEND ANDROID_EXTRA_LIBS ${CMAKE_SOURCE_DIR}/vosk/libvosk.so)
+
+add_custom_command(TARGET voskPlugin POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:voskPlugin> ${SPEECHTOTEXT_PLUGINS_DIR}
+  COMMAND_EXPAND_LISTS
+)
+
