Use correct py7zr version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,7 @@ jobs:
       uses: jurplel/install-qt-action@v3
       with:
         aqtversion: '==3.1.*'
+        py7zrversion: '>=0.20.2'
         cache: true
         version: '6.5.0'
         modules: 'qtimageformats qtmultimedia qtspeech'
