--- a/speechtotext/CMakeLists.txt
+++ b/speechtotext/CMakeLists.txt
@@ -1,9 +1,11 @@
 include_directories(${PROJECT_SOURCE_DIR}/speechtotext)
 
-set(TTS_PLUGINS)
+set(TTS_PLUGINS ${TTS_PLUGINS})
 
 add_subdirectory(vosk-api)
 
 if (NOT TTS_PLUGINS)
     message(FATAL_ERROR "No speech to text plugin found!")
 endif()
+
+set(TTS_PLUGINS ${TTS_PLUGINS} PARENT_SCOPE)
