--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,8 +117,7 @@ set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/android")
 set_target_properties(voiceassistant PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER org.qtproject.voiceassistant
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING
-    ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     MACOSX_BUNDLE TRUE
     WIN32_EXECUTABLE TRUE
     QT_ANDROID_EXTRA_LIBS "${ANDROID_EXTRA_LIBS}"
@@ -141,6 +140,7 @@ include(GNUInstallDirs)
 # Install the main executable
 install(TARGETS voiceassistant
     RUNTIME DESTINATION .
+    BUNDLE DESTINATION . # Specify the bundle destination for MACOSX_BUNDLE
 )
 
 # Install TTS plugins
