Use apt-fast to download packages faster

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,8 @@ jobs:
     - if: contains( matrix.os, 'ubuntu')
       name: Install Qt on Linux
       run: |
-        sudo apt-get update
-        sudo apt-get install -y qtbase5-dev qtdeclarative5-dev qttools5-dev qtmultimedia5-dev libqt5texttospeech5-dev libqt5svg5-dev qt5ct 
+        sudo apt-fast update
+        sudo apt-fast install -y qtbase5-dev qtdeclarative5-dev qttools5-dev qtmultimedia5-dev libqt5texttospeech5-dev libqt5svg5-dev qt5ct 
 
     - name: Download and extract Vosk
       run: |
