--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: build
-        key: ${{ runner.os }}-build-${{ matrix.QT_VER }}
+        key: ${{ matrix.os }}-build-${{ matrix.QT_VER }}
 
     - name: Build
       run: |
