--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,10 @@ name: Test build
 
 on:
   push:
-    paths: ['.github/workflows/**', 'CMakeLists.txt', '**.cmake', '**.h', '*.c', '**.cpp']
+    paths: ['.github/workflows/**', 'CMakeLists.txt', '**.cmake', '**.h', '*.c', '**.cpp', '**.ui']
   pull_request:
     types: [opened, synchronize, edited, reopened, review_requested, ready_for_review]
-    paths: ['CMakeLists.txt', '**.cmake', '**.h', '*.c', '**.cpp']
+    paths: ['CMakeLists.txt', '**.cmake', '**.h', '*.c', '**.cpp', '**.ui']
   workflow_dispatch:
 
 jobs:
