target_link_librarys: Add missing PRIVATE keyword

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(test_load_plugins test_load_plugins.cpp ../plugins/base.h)
 
-target_link_libraries(test_load_plugins Qt${QT_VERSION_MAJOR}::Core)
+target_link_libraries(test_load_plugins PRIVATE Qt${QT_VERSION_MAJOR}::Core)
 
 target_compile_definitions(test_load_plugins PRIVATE NO_BRIDGE PLUGIN="$<TARGET_FILE:testPlugin>")
 
