--- a/speechtotext/vosk-api/CMakeLists.txt
+++ b/speechtotext/vosk-api/CMakeLists.txt
@@ -1,4 +1,5 @@
 find_package(Vosk)
+include(Plugins)
 
 if (NOT ${Vosk_FOUND})
     message(WARNING "Vosk not found! Download vosk from https://github.com/alphacep/vosk-api/releases
@@ -9,11 +10,10 @@ endif()
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
 
-add_library(voskPlugin MODULE ../speechtotextplugin.h voskplugin.cpp voskplugin.h)
+add_plugin(voskPlugin ../speechtotextplugin.h voskplugin.cpp voskplugin.h)
 target_link_libraries(voskPlugin Qt${QT_VERSION_MAJOR}::Core Vosk)
 
 set(TTS_PLUGINS ${TTS_PLUGINS} voskPlugin PARENT_SCOPE)
-list(APPEND ANDROID_EXTRA_LIBS ${CMAKE_SOURCE_DIR}/vosk/libvosk.so)
 
 add_custom_command(TARGET voskPlugin POST_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:voskPlugin> ${SPEECHTOTEXT_PLUGINS_DIR}
