--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -2,15 +2,9 @@ cmake_minimum_required(VERSION 3.13)
 
 cmake_policy(SET CMP0077 NEW)
 
-set(MZ_LIBCOMP OFF)
-set(MZ_PKCRYPT OFF)
-set(MZ_WZAES OFF)
-set(MZ_OPENSSL OFF)
-set(MZ_LIBBSD OFF)
-set(MZ_SIGNING OFF)
-
-set(MZ_DECOMPRESS_ONLY ON)
-
+set(CMAKE_AUTOMOC OFF)
 set(BUILD_SHARED_LIBS OFF)
+
+set(ELZIP_DECOMPRESS_ONLY ON)
 
 add_subdirectory(11Zip)
